feat: implementando e corrigindo funcionalidades de doação